2007-10-14  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_vline), (clearlooks_style_draw_hline):
	Draw lines long enough, they were one pixel too short.

	* themes/Clearlooks/gtk-2.0/gtkrc:
	Make menu separators smaller. (#480629, Alex Jones)

2007-10-13  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/hc/src/hc_gtk2_engine.c: (hc_rc_style_parse),
	(hc_rc_style_merge), (hc_rc_style_init), (hc_style_init):
	* engines/hc/src/hc_gtk2_engine.h:
	* engines/thinice/src/thinice_rc_style.c: (thinice_rc_style_init),
	(thinice_rc_style_parse), (thinice_rc_style_merge):
	* engines/thinice/src/thinice_rc_style.h:
	Fix RC merging in both thinice and high contrast.

2007-10-13  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/hc/src/hc-style.c: (hc_draw_slider), (hc_draw_check):
	Fixed incorrect rounding in hc engine and reworked checkmark
	drawing. (#482542, Josselin Mouette)

2007-10-08  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	Added a small comment.

2007-10-08  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	The combobox text colour workaround was broken.

2007-10-07  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	Fix progress bars in menus (eg. network manager). These were broken
	even though the comment above said what needs to be done ...

2007-10-07  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_entry):
	Fix some comments.

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_set_widget_parameters), (clearlooks_style_draw_shadow):
	Only do the entry state hack if we are drawing an entry, not things
	like spinbutton arrows. (#475629, Diego Escalante Urrelo)

2007-09-23  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_button):